platform/plugins/Streams/web/css/tools/fileManager.css
.Streams_fileManager_tool {
    max-width: 100%;
    max-height: 100%;
}
.Streams_fileManager_dialog_con {
    position: fixed;
    width:100%;
    height: 100%;
    display: block;
    top: 0;
    left: 0;
    background: #ffffff;
    z-index: 999999;
}
.Streams_fileManager_con {
    height: 100%;
    padding: 5px;
}

.Streams_fileManager_inner {
    display: flex;
    flex-direction: column;
    height: 100%;
}
.Streams_fileManager_controls_con {
    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
}
.Streams_fileManager_controls_inner {
    display: flex;
    margin: 10px;
    position: relative;
}
.Streams_fileManager_controls_item {
    padding:5px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0 5px 0 5px;
    cursor: pointer;
}
.Streams_fileManager_controls_back_con {
    position: relative;
    width: 25px;
    display: flex;
    justify-content: center;
    align-items: center;
}
.Streams_fileManager_controls_back_icon {
    /*position: absolute;
    right:10px;
    top:12px;*/
    width:15px;
    height:15px;
    border:2px solid #000;
    border-left: none;
    border-top: none;
    transform: rotate(
            135deg
    );
}
.Streams_fileManager_controls_forward_con {
    position: relative;
    width: 25px;
    display: flex;
    justify-content: center;
    align-items: center;
}
.Streams_fileManager_controls_forward_icon {
    /*position: absolute;
    right:10px;
    top:12px;*/
    width:15px;
    height:15px;
    border:2px solid #000;
    border-left: none;
    border-top: none;
    transform: rotate(
            -45deg
    );
}
.Streams_fileManager_controls_add_con {
    margin-left: 10px;
}
.Streams_fileManager_controls_add_icon {
    width: 24px;
    height: 24px;
}
.Streams_fileManager_controls_add_text {
    margin-left: 3px;
}
.Streams_fileManager_uploadFile .Streams_fileManager_add_item {
    display: flex;
}


.Streams_fileManager_controls_close {
    position: absolute;
    top: 0;
    right: 0;
    width: 30px;
    height: 30px;
    cursor: pointer;
}
.Streams_fileManager_controls_close:before{
    content: ' ';
    display: block;
    background-image: url('data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/" x="0px" y="0px" width="22px" height="23px" viewBox="-0.017 -0.916 22 23" enable-background="new -0.017 -0.916 22 23" xml:space="preserve"> <defs> </defs> <path d="M21.238,21.737c-0.128,0-0.256-0.049-0.354-0.146L0.146,0.854c-0.195-0.195-0.195-0.512,0-0.707s0.512-0.195,0.707,0 l20.738,20.737c0.195,0.195,0.195,0.512,0,0.707C21.494,21.688,21.366,21.737,21.238,21.737z"/> <path d="M0.5,21.737c-0.128,0-0.256-0.049-0.354-0.146c-0.195-0.195-0.195-0.512,0-0.707L20.884,0.146 c0.195-0.195,0.512-0.195,0.707,0s0.195,0.512,0,0.707L0.854,21.591C0.756,21.688,0.628,21.737,0.5,21.737z"/> </svg>');
    background-repeat: no-repeat;
    background-position: center center;
    width:30px;
    height: 30px;
}

.Streams_fileManager_explorer_con {
    flex:1;
}
.Streams_fileManager_explorer_inner {
    display: flex;
    /*justify-content: space-evenly;*/
    flex-wrap: wrap;
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
    padding-top:10px;
}

.Streams_fileManager_file_item{
    /*min-width: 150px;
    min-height: 150px;
    width: 150px;
    height: 150px;*/
    position: relative;
    cursor: pointer;
}
.Streams_fileManager_file_item_dummy_el {
    margin-top:100%;
}
.Streams_fileManager_file_item_wrapper {
    top:0;
    bottom: 0;
    left:0;
    right:0;
    position: absolute;
    height: 100%;
    width: 100%;
    padding: 5px;
}
.Streams_fileManager_file_item_inner {
    height: 100%;
    width: 100%;
    padding: 5px;
    border: 1px solid rgba(0, 0, 0, 0.17);
    border-radius: 5px;
}
.Streams_fileManager_file_item_inner .Streams_preview_container.Streams_preview_view,
.Streams_fileManager_file_item_inner .Streams_preview_container.Streams_preview_edit {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100%;
}

.Streams_fileManager_file_item_inner .Streams_preview_audio_player,
.Streams_fileManager_file_item_inner .Streams_fileManager_file_icon_con {
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
}
.Streams_fileManager_file_item_inner .Streams_preview_contents {
   line-height: 0;
}
.Streams_fileManager_file_item_inner .Streams_fileManager_file_icon_con img.Streams_preview_icon {
    margin: 0;
}
.Streams_fileManager_file_item .Q_actions_container {

}

.Streams_fileManager_dialogue {
    z-index: 9999999 !important;
    width: 500%;
}

.Streams_fileManager_dialogue_con {
    width:100%;
    height:100%;
    position: fixed;
    top:0;
    left:0;
    background: #ffffff;
    z-index: 999999999999999;
}
/*
.Streams_fileManager_uploadFile {
    z-index: 9999999999999999999 !important;
}*/

